src/test/deca/context/invalid/expr_cast_boolean_to_float.deca
// Test de la règle (3.39) : on ne peut pas cast de boolean vers float.
{
	float var1;
	boolean var2;
	var1 = (float)(var2);
}

// Résultat :
//# a
